grammar.js
    source_file: ($) =>
      seq(optional($.ansi_lexer_pragma), optional($._statement_list)),

    _statement_list: ($) =>
      seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    line_comment: () => token(seq("--", /[^!+\r\n]?/, /[^\r\n]*/)),

    // Multi-line block comment: /* ... */
    block_comment: () => token(seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),

    // =======================================================================
    // IDENTIFIERS
    // =======================================================================

    // Plain (unquoted) identifier.  Must not be a keyword — tree-sitter
    // handles this via the `word` property.
    plain_identifier: () => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Backtick-quoted identifier: `arbitrary/path`
    // Supports C-style escape sequences.
    backtick_identifier: () =>
      token(seq("`", repeat(choice(/[^`\\]/, seq("\\", /./))), "`")),

    identifier: ($) => choice($.plain_identifier, $.backtick_identifier),

    // Named expression: $foo, $_bar, $_
    named_expression: () => token(seq("$", /[a-zA-Z_][a-zA-Z0-9_]*/)),

    // =======================================================================
    // LITERALS
    // =======================================================================

    // ---- Integer literal ----
    // Decimal, hex (0x), octal (0o), binary (0b), with optional type suffix.
    integer_literal: () =>
      token(
        seq(
          choice(/0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/, /[0-9]+/),
          optional(
            choice(
              // Pg suffixes (multi-char first to avoid prefix match)
              /[pP][nN]/i,
              /[pP][bB]/i,
              /[pP][sS]/i,
              /[pP][iI]/i,
              // YQL suffixes
              /[uU][lL]/,
              /[uU][sS]/,
              /[uU][tT]/,
              /[uU]/,
              /[lL]/,
              /[sS]/,
              /[tT]/,
              /[pP]/,
            ),
          ),
        ),
      ),

    // ---- Float literal ----
    float_literal: () =>
      token(
        seq(
          choice(
            seq(
              choice(seq(/[0-9]+/, ".", /[0-9]*/), seq(".", /[0-9]+/)),
              optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            ),
            seq(/[0-9]+/, /[eE]/, optional(/[+-]/), /[0-9]+/),
          ),
          optional(
            choice(/[pP][nN]/i, /[pP][fF]4/i, /[pP][fF]8/i, /[pP]/, /[fF]/),
          ),
        ),
      ),

    // ---- String literals ----

    // Single-quoted with C-escapes + optional type suffix
    single_quoted_string: () =>
      token(
        seq(
          "'",
          repeat(choice(/[^'\\]/, seq("\\", /./))),
          "'",
          optional(
            choice(
              /[pP][tT]/,
              /[pP][vV]/,
              /[pP][bB]/,
              /[pP]/,
              /[uU]/,
              /[yY]/,
              /[jJ]/,
              /[sS]/,
            ),
          ),
        ),
      ),

    // Double-quoted (C++ mode) with C-escapes + optional type suffix
    double_quoted_string: () =>
      token(
        seq(
          '"',
          repeat(choice(/[^"\\]/, seq("\\", /./))),
          '"',
          optional(
            choice(
              /[pP][tT]/,
              /[pP][vV]/,
              /[pP][bB]/,
              /[pP]/,
              /[uU]/,
              /[yY]/,
              /[jJ]/,
              /[sS]/,
            ),
          ),
        ),
      ),

    // Multiline string: @@…@@  (double @@ inside is an escape)
    multiline_string: () =>
      token(
        seq(
          "@@",
          repeat(choice(/[^@]/, seq("@", /[^@]/))),
          "@@",
          optional(
            choice(
              /[pP][tT]/,
              /[pP][vV]/,
              /[pP][bB]/,
              /[pP]/,
              /[uU]/,
              /[yY]/,
              /[jJ]/,
              /[sS]/,
            ),
          ),
        ),
      ),

    string_literal: ($) =>
      choice(
        $.single_quoted_string,
        $.double_quoted_string,
        $.multiline_string,
      ),

    bool_literal: () => choice(kw("TRUE"), kw("FALSE")),

    null_literal: () => kw("NULL"),

    type_expr: ($) =>
      choice(
        $.optional_type,
        $.list_type,
        $.dict_type,
        $.set_type,
        $.tuple_type,
        $.struct_type,
        $.variant_type,
        $.stream_type,
        $.callable_type,
        $.resource_type,
        $.tagged_type,
        $.enum_type,
        $.simple_type,
      ),

    simple_type: ($) =>
      seq(
        $.identifier,
        optional(
          seq(
            "(",
            commaSep1(choice($.integer_literal, $.string_literal, $.type_expr)),
            ")",
          ),
        ),
      ),

    asterisk: () => "*",

    // ---- Parenthesized expression ----
    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    // ---- Tuple expression: (a, b, c) ----
    subquery_expression: ($) => seq("(", $.select_statement, ")"),

    // ---- Struct literal: <| k: v, … |> ----
    function_call: ($) =>
      prec(
        PREC.ACCESS,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.named_expression,
              seq($.identifier, "::", $.identifier),
            ),
          ),
          "(",
          optional($.argument_list),
          ")",
        ),
      ),

    argument_list: ($) =>
      seq($._argument, repeat(seq(",", $._argument)), optional(",")),

    _argument: ($) =>
      choice(
        seq($.expression, kw("AS"), $.identifier),
        $.expression,
        $.asterisk,
      ),

    // ---- Window function call: expr OVER w  or  expr OVER (window_spec) ----
    // This is modeled as a postfix operator on any expression (typically a
    // function_call), so tree-sitter doesn't need to duplicate function_call
    // internals.
    over_expression: ($) =>
      prec.left(
        PREC.ACCESS,
        seq(
          field("function", $.expression),
          kw("OVER"),
          field(
            "window",
            choice($.identifier, seq("(", optional($.window_spec), ")")),
          ),
        ),
      ),

    // ---- Special pseudo-functions ----
    member_access: ($) =>
      prec.left(
        PREC.ACCESS,
        seq(
          field("object", $.expression),
          ".",
          field("member", choice($.identifier, $.integer_literal)),
        ),
      ),

    // ---- Subscript access: e[key] ----
    binary_expression: ($) => {
      /** @param {number} p @param {RuleOrLiteral} op */
      const binLeft = (p, op) =>
        prec.left(
          p,
          seq(
            field("left", $.expression),
            field("operator", op),
            field("right", $.expression),
          ),
        );
      /** @param {number} p @param {RuleOrLiteral} op */
      const binRight = (p, op) =>
        prec.right(
          p,
          seq(
            field("left", $.expression),
            field("operator", op),
            field("right", $.expression),
          ),
        );

      return choice(
        binLeft(PREC.OR, kw("OR")),
        binLeft(PREC.AND, kw("AND")),
        binLeft(PREC.XOR, kw("XOR")),
        binLeft(PREC.COMPARE, choice("=", "==", "!=", "<>")),
        binLeft(PREC.ORDER, choice("<", "<=", ">=", ">")),
        binLeft(PREC.BIT, choice("&", "|", "^", "<<", ">>", "|<<", ">>|")),
        binRight(PREC.COALESCE, "??"),
        binLeft(PREC.PLUS, choice("+", "-")),
        binLeft(PREC.TIMES, choice("*", "/", "%")),
        binLeft(PREC.CONCAT, "||"),
      );
    },

    // ---- IN ----
    in_expression: ($) =>
      prec.left(
        PREC.IN,
        seq(
          field("left", $.expression),
          optional(kw("NOT")),
          kw("IN"),
          optional($.sql_hint),
          field(
            "right",
            choice(
              seq("(", commaSep1($.expression), ")"),
              $.subquery_expression,
              $.named_expression,
              $.function_call,
            ),
          ),
        ),
      ),

    // ---- BETWEEN ----
    between_expression: ($) =>
      prec.left(
        PREC.BETWEEN,
        seq(
          field("value", $.expression),
          optional(kw("NOT")),
          kw("BETWEEN"),
          optional(choice(kw("ASYMMETRIC"), kw("SYMMETRIC"))),
          field("low", $.expression),
          kw("AND"),
          field("high", $.expression),
        ),
      ),

    // ---- LIKE / ILIKE / REGEXP / RLIKE / MATCH ----
    like_expression: ($) =>
      prec.left(
        PREC.LIKE,
        seq(
          field("left", $.expression),
          optional(kw("NOT")),
          field(
            "operator",
            choice(
              kw("LIKE"),
              kw("ILIKE"),
              kw("REGEXP"),
              kw("RLIKE"),
              kw("MATCH"),
            ),
          ),
          field("pattern", $.expression),
          optional(seq(kw("ESCAPE"), $.string_literal)),
        ),
      ),

    // ---- IS [NOT] NULL ----
    is_null_expression: ($) =>
      prec.left(
        PREC.IS,
        seq(
          field("operand", $.expression),
          kw("IS"),
          optional(kw("NOT")),
          kw("NULL"),
        ),
      ),

    // ---- IS [NOT] DISTINCT FROM ----
    case_expression: ($) =>
      seq(
        kw("CASE"),
        optional(field("operand", $.expression)),
        repeat1($.when_clause),
        optional(seq(kw("ELSE"), field("default", $.expression))),
        kw("END"),
      ),

    when_clause: ($) =>
      seq(
        kw("WHEN"),
        field("condition", $.expression),
        kw("THEN"),
        field("result", $.expression),
      ),

    // ---- CAST / BITCAST ----
    cast_expression: ($) =>
      prec(
        PREC.CAST,
        seq(
          kw("CAST"),
          "(",
          field("value", $.expression),
          kw("AS"),
          field("type", $.type_expr),
          ")",
        ),
      ),

    lambda_expression: ($) =>
      prec(
        PREC.LAMBDA,
        seq(
          field("parameters", $.lambda_params),
          "->",
          field("body", choice(seq("(", $.expression, ")"), $.lambda_body)),
        ),
      ),

    lambda_params: ($) =>
      seq("(", commaSep(seq($.named_expression, optional("?"))), ")"),

    named_expr_assignment: ($) =>
      seq(
        choice(
          $.named_expression,
          seq($.named_expression, repeat1(seq(",", $.named_expression))),
        ),
        "=",
        $.expression,
      ),

    // =======================================================================
    // SELECT STATEMENT (Stage 3)
    // =======================================================================

    select_statement: ($) =>
      seq(
        optional(kw("DISCARD")),
        $._select_core,
        repeat(
          seq(
            choice(
              seq(kw("UNION"), optional(kw("ALL"))),
              seq(kw("INTERSECT"), optional(kw("ALL"))),
              seq(kw("EXCEPT"), optional(kw("ALL"))),
            ),
            $._select_core,
          ),
        ),
        optional($.order_by_clause),
        optional($.limit_clause),
        optional($.into_result_clause),
      ),

    _select_core: ($) => choice($.select_body, seq("(", $.select_body, ")")),

    select_body: ($) =>
      seq(
        kw("SELECT"),
        optional(choice(kw("DISTINCT"), kw("ALL"))),
        $.select_list,
        optional($.from_clause),
        optional($.flatten_clause),
        optional($.where_clause),
        optional($.group_by_clause),
        optional($.having_clause),
        optional($.window_clause),
      ),

    select_list: ($) => commaSep1($.select_item),

    select_item: ($) =>
      choice(
        $.asterisk,
        seq(choice($.identifier, $.named_expression), ".", $.asterisk),
        seq($.expression, optional(seq(optional(kw("AS")), $.identifier))),
      ),

    // ---- FROM ----
    from_clause: ($) =>
      seq(kw("FROM"), $._table_or_subquery, repeat($.join_clause)),

    _table_or_subquery: ($) =>
      choice(
        $.table_ref,
        seq(
          $.subquery_expression,
          optional(seq(optional(kw("AS")), field("alias", $.identifier))),
        ),
        seq(
          $.named_expression,
          optional(seq("(", commaSep($.expression), ")")),
          optional(seq(optional(kw("AS")), field("alias", $.identifier))),
        ),
      ),

    table_ref: ($) =>
      seq(
        optional(kw("ANY")),
        choice(
          $.backtick_identifier,
          seq($.identifier, ".", $.backtick_identifier),
          seq(
            $.identifier,
            ":",
            $.named_expression,
            ".",
            $.backtick_identifier,
          ),
          $.identifier,
          $.table_function,
          seq(kw("AS_TABLE"), "(", $.expression, ")"),
        ),
        optional(seq(kw("VIEW"), $.identifier)),
        optional($.with_table_settings),
        optional(seq(optional(kw("AS")), field("alias", $.identifier))),
        optional($.sample_clause),
      ),

    with_table_settings: ($) =>
      seq(
        kw("WITH"),
        choice($.table_setting, seq("(", commaSep1($.table_setting), ")")),
      ),

    table_setting: ($) => seq($.identifier, optional(seq("=", $.expression))),

    join_clause: ($) =>
      seq(
        optional($.join_type),
        kw("JOIN"),
        optional(kw("ANY")),
        $._table_or_subquery,
        optional(seq(kw("VIEW"), $.identifier)),
        optional(seq(optional(kw("AS")), field("alias", $.identifier))),
        optional($.join_constraint),
      ),

    join_type: () =>
      choice(
        kw("INNER"),
        seq(kw("LEFT"), optional(choice(kw("OUTER"), kw("SEMI"), kw("ONLY")))),
        seq(kw("RIGHT"), optional(choice(kw("OUTER"), kw("SEMI"), kw("ONLY")))),
        seq(kw("FULL"), optional(kw("OUTER"))),
        kw("CROSS"),
        kw("EXCLUSION"),
      ),

    join_constraint: ($) =>
      choice(
        seq(kw("ON"), $.expression),
        seq(kw("USING"), "(", commaSep1($.identifier), ")"),
      ),

    // ---- FLATTEN ----
    flatten_clause: ($) =>
      choice(
        seq(kw("FLATTEN"), kw("COLUMNS")),
        seq(
          kw("FLATTEN"),
          optional(choice(kw("LIST"), kw("DICT"), kw("OPTIONAL"))),
          kw("BY"),
          choice(
            $.flatten_by_item,
            seq("(", commaSep1($.flatten_by_item), ")"),
          ),
        ),
      ),

    flatten_by_item: ($) =>
      seq($.expression, optional(seq(kw("AS"), $.identifier))),

    // ---- WHERE ----
    where_clause: ($) => seq(kw("WHERE"), $.expression),

    // ---- GROUP BY ----
    group_by_clause: ($) =>
      seq(
        kw("GROUP"),
        optional($.sql_hint),
        kw("BY"),
        commaSep1($.group_by_item),
      ),

    group_by_item: ($) =>
      choice(
        $.rollup_clause,
        $.cube_clause,
        $.grouping_sets_clause,
        $.session_window_call,
        seq($.expression, optional(seq(kw("AS"), $.identifier))),
      ),

    having_clause: ($) => seq(kw("HAVING"), $.expression),

    // ---- WINDOW ----
    window_clause: ($) => seq(kw("WINDOW"), commaSep1($.window_definition)),

    window_definition: ($) =>
      seq($.identifier, kw("AS"), "(", optional($.window_spec), ")"),

    window_spec: ($) =>
      choice(
        seq(
          $.partition_by_clause,
          optional($.window_order_by),
          optional($.frame_clause),
        ),
        seq($.window_order_by, optional($.frame_clause)),
        $.frame_clause,
      ),

    window_order_by: ($) =>
      seq(kw("ORDER"), kw("BY"), commaSep1($.order_by_item)),

    order_by_clause: ($) =>
      seq(
        choice(
          seq(kw("ORDER"), kw("BY")),
          seq(kw("ASSUME"), kw("ORDER"), kw("BY")),
        ),
        commaSep1($.order_by_item),
      ),

    commit_statement: () => kw("COMMIT"),

    // ---- DISCARD (standalone) ----
